# python-security-training-local

./: .gitignore  .semgrep.yml  README.md  pyproject.toml
docs/: insecure-patterns.md
fixtures/: vuln_markers.py
src/security_training/: __init__.py  validation.py
tests/: test_validation.py
